syntax = "proto3";

package gbf;

enum Language {
  UNSPECIFIED = 0;
  JAPANESE = 1;
  ENGLISH = 2;
};

message RaidBoss {
  string name = 1;
  optional string image = 2;
  int64 lastSeen = 3;
  int32 level = 4;
  Language language = 5;
  optional string translatedName = 6;
};